[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/blacksmith/subprocesses/casting.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/game/atlas.png" type="Texture" id=2]
[ext_resource path="res://my_theme.theme" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 178, 10, 12, 21 )
filter_clip = true

[sub_resource type="StyleBoxFlat" id=3]

[node name="Forge" type="Control"]
margin_right = 495.0
margin_bottom = 749.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 488.0
margin_bottom = 742.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 381.0
margin_bottom = 735.0
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 341.0
margin_bottom = 695.0
custom_styles/panel = SubResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="PanelContainer/HBoxContainer/MarginContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 297.0
margin_bottom = 651.0
step = 0.1
value = 44.0
allow_greater = true
texture_progress = SubResource( 2 )
fill_mode = 3
nine_patch_stretch = true

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/PanelContainer/TextureProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 385.0
margin_right = 481.0
margin_bottom = 735.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
custom_constants/separation = 60

[node name="Control" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 96.0

[node name="CompleteButton" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 96.0
margin_bottom = 85.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Complete"

[node name="TickTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/CompleteButton" to="." method="_on_CompleteButton_pressed"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
